--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^3.2.4",
     "web-vitals": "^2.1.4"
   },
@@ -50,5 +51,4 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0"
   }
-  
 }
